--- a/.gitignore
+++ b/.gitignore
@@ -131,7 +131,15 @@ migrations/
 staticfiles/
 media/
 logs/
+logs/**
 *.log
+
+# Python cache files
+__pycache__/
+**/__pycache__/
+*.pyc
+*.pyo
+*.pyd
 
 # Database
 *.db
