--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
+
+# DaData API settings
+DADATA_TOKEN=74753cd88c17969217cf40e77ca4d8e93d65a18c
+DADATA_SECRET=74753cd88c17969217cf40e77ca4d8e93d65a18c
